app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "bootstrap/scss/bootstrap";
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');

@mixin roboto {
    font-family: 'Roboto', sans-serif;
}

@mixin lato {
    font-family: 'Lato', sans-serif;
}

@mixin staatliches {
    font-family: 'Staatliches', cursive;
}

@mixin slider {
    position: relative;
    background: none;
    color: #fff;
    text-decoration: none;
    border: 0.2em solid #fff;
    padding: 0.5em 1em;
    &::before {
      content: "";
      display: block;
      position: absolute;
      width: 10%;
      background: #222;
      height: 0.3em;
      right: 20%;
      top: -0.21em;
      transform: skewX(-45deg);
      -webkit-transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
      transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
    }
    &::after {
      content: "";
      display: block;
      position: absolute;
      width: 10%;
      background: #222;
      height: 0.3em;
      left: 20%;
      bottom: -0.25em;
      transform: skewX(45deg);
      -webkit-transition: all 0.45 cubic-bezier(0.86, 0, 0.07, 1);
      transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
    }
    &:hover {
      &::before {
        right: 80%;
      }
      &::after {
        left: 80%;
      }
    }
  }

.main-heading {
    @include staatliches;
    position: relative;
    left: 50px;
    top: 20px;
}

.form-heading {
  @include staatliches;
  font-size: 100px;
}

.sub-heading {
    @include staatliches;
}

.success-heading {
  @include staatliches;
  font-size: 100px;
}

.sold-text {
  @include staatliches;
  font-size: 50px;
  position: absolute;
  margin-left: 10%;
  margin-top: 10%;
  text-decoration: underline;
}

.mx-auto {
    @include staatliches;
}

.nav-link {
    @include slider;
    @include staatliches;
    font-size: 18px;
    letter-spacing: 0.5px;
    color: #fff !important;
}

// I hate that important is here but bootstrap wasn't letting me override
.btn-style {
    text-decoration: none !important;
    @include staatliches;
}

.msg-btn {
    text-decoration: none !important;
    @include lato
}

/*------------------------------
	Account buttons
------------------------------*/
.ctrl-standard.fx-sliderIn {
  color: black;
  border-color: #81aaa4;
}
.ctrl-standard.fx-sliderIn::after {
  background: #81aaa4;
}

[class*="ctrl-"] {
  padding: 5ox 10px;
  border-radius: 2px;
  border: 1px solid #231f20;
}
[class*="ctrl-"][class*="fx-"]:hover,
[class*="ctrl-"][class*="fx-"].active {
  color: #231f20;
}
  [class*="fx-"],
[class*="fx-"]:hover {
    -webkit-transition: color 0.5s  ease-in-out;
    transition: color 0.5s  ease-in-out;
  }
  [class*="fx-"]:not(.fx-dyna) {
    position: relative;
    z-index: 1;
    -webkit-transition-delay: 0.2s;
            transition-delay: 0.2s;
    overflow: hidden;
  }
  [class*="fx-"]:not(.fx-dyna)::after,
[class*="fx-"]:not(.fx-dyna)::before {
    content: "";
    display: block;
    position: absolute;
    z-index: -1;
  }
  .fx-sliderIn::after {
    -webkit-transition: width 0.5s ease-in-out;
    transition: width 0.5s ease-in-out;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 0;
  }
  .fx-sliderIn:hover::after,
.fx-sliderIn.active::after {
    -webkit-transition: width 0.5s ease-in-out;
    transition: width 0.5s ease-in-out;
    width: 100%;
  }
  :checked + .fx-sliderIn::after,
.fx-sliderIn.active::after {
    width: 300%;
  }


h3 {
    @include lato;
}

.card-title {
    @include lato;
    font-size: 26px;
    font-weight: bold;
}

.card-text {
    @include lato;
    font-size: 20px;
}

.navbar {
    @include lato;
    background: #222;
}

.greeting {
    @include lato;
    font-size: 20px;
    position: absolute;
    top: 80px;
    right: 50px;
}

.carousel-shoe-pic {
  width: 100%;
  max-height: 450px;
}

#carousel_images {
    margin: auto;
    max-width: 700px;
}

#carousel.carousel.slide {
    max-width: 50%;
    margin: auto;
}

.carousel-caption {
    text-shadow: 1px 0 0 #fff, 0 -1px 0 #fff, 0 1px 0 #fff, -1px 0 0 #fff;
    @include staatliches;
    right: 0;
    bottom: 0;
    position: absolute;
    font-size: 30px;
}

.carousel-control-next-icon,
.carousel-control-prev-icon {
    filter: invert(100%);
    height: 50px;
    width: 50px;
}
/*------------------------------
	Form styling
------------------------------*/
.form-control {
  border-radius: 0;
  @include lato;
}

.picture-label {
  @include staatliches;
  color: #a1a2a3;
  font-size: 22px;
}

.form-control:focus {
  box-shadow: none;
}

.form-group {
  position: relative;
  margin-bottom: 25px;
  @include staatliches;
}

.form-group > label {
  color: #a1a2a3;
  -webkit-transform-origin: 0 0;
          transform-origin: 0 0;
  -webkit-transform: scale(1.4);
          transform: scale(1.4);
  pointer-events: none;
  position: relative;
  z-index: 5;
}

.form-group > input {
  width: 100%;
}

.form-group > label {
  -webkit-transition: -webkit-transform 0.4s;
  transition: -webkit-transform 0.4s;
  transition: transform 0.4s;
  transition: transform 0.4s, -webkit-transform 0.4s;
  -webkit-transform-origin: 0 0;
          transform-origin: 0 0;
  -webkit-transform: scale(1.4) translateY(20px);
          transform: scale(1.4) translateY(20px);
}

.form-group.not-empty > label {
  -webkit-transform: none;
          transform: none;
}

.form-control {
  border: 0;
  border-bottom: 1px solid #a1a2a3;
}
.form-control,
.form-control:focus,
.form-control:focus:hover {
  color: black;
  background: none;
  outline: none;
}
.form-control:focus,
.form-control:focus:hover {
  border-bottom: 1px solid black;
}

.user-extra-btn {
  margin-right: 100px;
}

.form-margin-reset {
  margin-top: 12.5%;
}

.form-margin-login {
  margin-top: 10%;
}

.form-margin-signup {
  margin-top: 8%;
}

.form-margin-edit-acc {
  margin-top: 6%;
}

.success-margin {
  margin-top: 10%;
}

.show-margin {
  margin-top: 10%;
  margin-left: 8%;
}

.img-show {
  width: 100%;
  height: 100%;
}

.show-title {
  font-size: 50px;
}

.show-text {
  font-size: 30px;
}

@media only screen and (max-width: 768px) {
  .carousel-caption {
    font-size: 16px;
  }

  // .row-cols-md-4 {
  //   width:100%;
  //   float:left;
  //   margin:0;
  // }
}

